# stackhawk-mcp

./: .bumpver.toml  .env.example  .gitignore  API_VALIDATION_REPORT.md  CLAUDE.md  Dockerfile  LICENSE  LIVE_API_VALIDATION_SUMMARY.md  MANIFEST.in  OFFICIAL_API_VALIDATION.md  README.md  cursor-mcp-config.json  final_endpoint_validation.py  live_api_validation_report.json  pyproject.toml  pytest.ini  requirements.txt  server.json  stackhawk-mcp.dxt  stackhawk-openapi-official.json  stackhawk.yml  test_new_tools.py  test_output.txt  validate_against_official_oas.py  validate_api_calls.py  validate_live_api_docs.py
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  prepare-release.yml  publish-docker.yml  publish-pypi.yml  release.yml
examples/: example_schema_usage.py
stackhawk_mcp/: __init__.py  __main__.py  http_server.py  server.py
tests/: quick_test.py  test_all_time_fix.py  test_anti_hallucination.py  test_api_calls.py  test_api_endpoint_validation.py  test_application_vulnerabilities.py  test_connection.py  test_executive_summary_fix.py  test_mcp_imports.py  test_pagination_simple.py  test_repository_analysis.py  test_sensitive_data.py  test_server_fix.py  test_tool_schema.py  test_user_scenarios.py  test_ux_improvements.py  test_vulnerability_reporting.py  test_yaml_tools.py
